--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
         <module>approvaltests-util</module>
         <module>approvaltests</module>
         <module>approvaltests-hadoop</module>
+        <module>approvaltests-spock</module>
         <module>counter_display</module>
         <module>html_locker</module>
     </modules>
